# flask-mongodb-boilerplate

./: .flaskenv  .gitignore  Dockerfile  README.md  application.py  docker-compose.yml  envvars  manage.py  mongod.conf  pyproject.toml  requirements.txt  settings.py  wsgi.py
.github/workflows/: code-check.yml
counter/: models.py  tests.py  views.py
tests/: conftest.py  test_counter.py
